<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardTestActivity">

    <EditText
        android:id="@+id/et_add_card_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:hint="@string/et_card_title"
        android:textSize="20sp"
        android:layout_margin="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_add_card_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:hint="@string/et_card_description"
        android:textSize="18sp"
        android:layout_margin="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_card_name" />
    <EditText
        android:id="@+id/et_add_card_points"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:hint="@string/et_card_points"
        android:textSize="18sp"
        android:layout_margin="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_card_description" />

    <TextView
        android:id="@+id/tv_card_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_display_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_card_points" />

    <TextView
        android:id="@+id/tv_entry_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_card_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_display_name" />

    <TextView
        android:id="@+id/tv_card_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_card_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_entry_amount" />

    <Button
        android:id="@+id/btn_add_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/btn_add_card"
        android:onClick="addCardBtn"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_display_name" />

    <Button
        android:id="@+id/btn_refresh_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_refresh_output"
        android:onClick="refreshValuesBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_card" />

    <Button
        android:id="@+id/btn_import_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_import_cards"
        android:onClick="importCardsBtn"
        app:layout_constraintEnd_toStartOf="@+id/btn_refresh_output"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_refresh_output" />

    <Button
        android:id="@+id/btn_export_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_export_cards"
        android:onClick="exportCardsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_refresh_output"
        app:layout_constraintTop_toTopOf="@+id/btn_refresh_output" />

    <Button
        android:id="@+id/btn_clear_all_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_clear_all_cards"
        android:onClick="clearAllCardsBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_refresh_output" />

</androidx.constraintlayout.widget.ConstraintLayout>