<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onStartBtn"
        android:text="@string/btn_start_game"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_card_testActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cardTestBtn"
        android:text="@string/btn_card_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_game" />

    <EditText
        android:id="@+id/et_set_time_limit"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="20"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btn_start_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_time_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_time_limit"
        app:layout_constraintBottom_toTopOf="@+id/et_set_time_limit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_last_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_last_score"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>